--- a/Michus/Views/Ecommerce/ListarProductos.cshtml
+++ b/Michus/Views/Ecommerce/ListarProductos.cshtml
@@ -68,7 +68,7 @@
                                 <div class="card h-100 shadow-sm border-0">
                                     <!-- Imagen del producto -->
                                     <div class="position-relative">
-                                        <img src="@product.Imagen" class="card-img-top rounded-top" alt="@product.ProdNom" style="height: 220px; object-fit: cover;">
+                                        <img src="~/assets/imagen/@(product.IdProducto).jpg" class="card-img-top rounded-top" alt="@product.ProdNom" style="height: 220px; object-fit: cover;">
                                         <span class="badge bg-success position-absolute top-0 start-0 m-2">Nuevo</span>
                                     </div>
 
