actualizando la vista del cart

--- a/Michus/Views/Ecommerce/Cart.cshtml
+++ b/Michus/Views/Ecommerce/Cart.cshtml
@@ -36,7 +36,8 @@
         </div>
 
         <div class="mt-4">
-            <a asp-action="Checkout" class="btn btn-primary">Proceed to Checkout</a>
+
+            <a asp-action="Checkout" id="pago" class="btn btn-primary">Proceed to Checkout</a>
         </div>
     }
 </div>
