--- a/Michus/Views/Ecommerce/Checkout.cshtml
+++ b/Michus/Views/Ecommerce/Checkout.cshtml
@@ -35,5 +35,5 @@
         </select>
     </div>
 
-    <button type="submit" class="btn btn-primary">Complete Purchase</button>
+    <button id="compleconpra" type="submit" class="btn btn-primary">Complete Purchase</button>
 </form>
