--- a/Michus/Views/Ecommerce/ListarProductos.cshtml
+++ b/Michus/Views/Ecommerce/ListarProductos.cshtml
@@ -44,11 +44,13 @@
             </ul>
             <div class="mt-4 text-center">
                 <form asp-action="Cart" method="get">
-                    <button type="submit" class="btn btn-primary w-100 py-2 fw-bold">
+                    <button id="vercarrito" type="submit" class="btn btn-primary w-100 py-2 fw-bold">
                         <i class="fas fa-shopping-cart me-2"></i> Ver Carrito
                     </button>
                 </form>
             </div>
+
+
         </aside>
 
 
@@ -57,7 +59,15 @@
             <div class="bg-primary text-white text-center py-5">
                 <h1 class="display-4">Descubre nuestros productos</h1>
                 <p class="fs-5">Encuentra las mejores ofertas y productos de calidad.</p>
+
             </div>
+            @if (TempData["Message"] != null)
+            {
+                <div class="alert alert-success" role="alert">
+                    @TempData["Message"]
+                </div>
+            }
+
             <div class="container py-4">
                 <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 row-cols-lg-4 g-4">
                     @if (Model != null && Model.Any())
@@ -83,9 +93,12 @@
                                         <span class="text-primary fs-5 fw-bold">S/ @product.Precio</span>
                                         <form asp-action="AddToCart" method="post">
                                             <input type="hidden" name="productId" value="@product.IdProducto" />
-                                            <button type="submit" class="btn btn-outline-primary btn-sm fw-bold">Agregar</button>
+                                            <button id="agregarpro_@product.IdProducto" type="submit" class="btn btn-outline-primary btn-sm fw-bold">Agregar</button>
                                         </form>
+
+
                                     </div>
+
                                 </div>
                             </div>
                         }
@@ -127,11 +140,15 @@
         aside a {
             transition: background-color 0.3s, color 0.3s;
             color: #D9C7F2; /* Texto inicial */
+            padding: 7px;
+            border-radius: 3px;
         }
 
             aside a:hover {
-                background-color: #513012; /* Fondo marrón oscuro */
+                background-color: #ff7f81; /* Fondo marrón oscuro */
                 color: white;
+                padding: 7px;
+                border-radius: 3px;
             }
 
     .btn-primary {
