Actualizando la vista del login cliente

--- a/Michus/Views/LoginCli/LoginCli.cshtml
+++ b/Michus/Views/LoginCli/LoginCli.cshtml
@@ -36,7 +36,7 @@
                     <input type="password" name="password" placeholder="Contraseña" required>
                 </div>
                 <a href="#">¿Olvidaste tu contraseña?</a>
-                <button class="button" type="submit">Iniciar Sesión</button>
+                <button id="loginbutton" class="button" type="submit">Iniciar Sesión</button>
             </form>
         </div>
 
@@ -67,13 +67,13 @@
                 <!-- Campo Email -->
                 <div class="conteiner-input">
                     <ion-icon name="mail-outline"></ion-icon>
-                    <input type="text" name="email" placeholder="Email" required>
+                    <input type="text" name="emailre" placeholder="Email" required>
                 </div>
 
                 <!-- Campo Contraseña -->
                 <div class="conteiner-input">
                     <ion-icon name="lock-closed-outline"></ion-icon>
-                    <input type="password" name="password" placeholder="Contraseña" required>
+                    <input type="password" name="passwordre" placeholder="Contraseña" required>
                 </div>
 
 
@@ -111,7 +111,7 @@
                     <input type="date" name="fechaNacimiento" placeholder="Fecha de Nacimiento" required>
                 </div>
 
-                <button class="button" type="submit">Registrarse</button>
+                <button id="regis" class="button" type="submit">Registrarse</button>
             </form>
         </div>
 
