--- a/Michus/Views/Ecommerce/HistorialCompras.cshtml
+++ b/Michus/Views/Ecommerce/HistorialCompras.cshtml
@@ -5,6 +5,12 @@
     ViewData["Title"] = "Historial de Compras";
 }
 
+<link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/alertify.min.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/alertifyjs@1.13.1/build/css/alertify.min.css" />
+
 <div class="container my-4">
     <h1 class="text-center mb-4">Historial de Compras</h1>
     <div class="table-responsive">
