--- a/Michus/Views/Ecommerce/ListarProductos.cshtml
+++ b/Michus/Views/Ecommerce/ListarProductos.cshtml
@@ -5,6 +5,8 @@
     var categories = ViewBag.Categories as List<SelectListItem> ?? new List<SelectListItem>();
 }
 
+<script src="//code.tidio.co/4usohkl43d7erqeuldozo6yl2hybdkef.js" async></script>
+
 <div class="container-fluid">
     <div class="row">
         <!-- Menú lateral con categorías -->
